Added the Navbar

--- a/index.html
+++ b/index.html
@@ -13,9 +13,17 @@
 </head>
 
 <body>
-    <header class="bg-[#FFFBF0] py-20 px-5 lg:px-28">
-        <nav>
-
+    <header class="bg-[#FFFBF0] pb-20 px-5 lg:px-28">
+        <nav class="flex justify-between pt-10 pb-10 lg:pb-0">
+            <div>
+                <img class="w-80" src="./icons/logo.png" alt="">
+            </div>
+            <div class="space-x-10 font-semibold hidden lg:inline">
+                <a href="">Home</a>
+                <a href="">Product</a>
+                <a href="">About</a>
+                <a href="">Contact</a>
+            </div>
         </nav>
         <div class="lg:flex justify-between items-center">
             <div class="space-y-2">
