Will switch to 2nd PC

--- a/index.html
+++ b/index.html
@@ -45,7 +45,9 @@
         </div>
     </header>
     <main>
-
+        <section class="lg:py-12 lg:px-28 max-w-7xl mx-auto ">
+            <h3 class="text-center lg:text-left font-one text-3xl text-blue-950">Woman Jackets</h3>
+        </section>
     </main>
 </body>
 
