--- a/index.html
+++ b/index.html
@@ -10,6 +10,11 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link
+        href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
@@ -27,10 +32,12 @@
         </nav>
         <div class="lg:flex justify-between items-center">
             <div class="space-y-2">
-                <h1 class="text-7xl uppercase"><span class="text-[#FABE4C] font-one">Be the Penguins</span><br><span
-                        class="font-one text-blue-950">of
+                <h1 class="text-7xl uppercase"><span class="text-[#FABE4C] font-bebas">Be the Penguins</span><br><span
+                        class="font-bebas text-blue-950">of
                         Winter</span></h1>
-                <p class="pb-2">Lorem Ipsum is simply dummy text of the printing<br> and typesetting industry.</p>
+                <p class="pb-2 font-roboto">Lorem Ipsum is simply dummy text of the printing<br> and typesetting
+                    industry.
+                </p>
                 <button
                     class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
                     <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
@@ -44,10 +51,154 @@
             </div>
         </div>
     </header>
+
+    <!-- Header Section Ends -->
+
+
+
+    <!-- Main Section Starts  -->
     <main>
+
+        <!-- Women Jacket Section -->
         <section class="lg:py-12 lg:px-28 max-w-7xl mx-auto ">
-            <h3 class="text-center lg:text-left font-one text-3xl text-blue-950">Woman Jackets</h3>
+            <h3 class="text-center lg:text-left font-bebas text-4xl lg:pb-5 text-blue-950">Woman Jackets</h3>
+            <div class="grid grid-cols-3 gap-x-12 ">
+                <!-- jacket-1 -->
+                <div class="space-y-3 p-4">
+                    <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                        <img src="./images/jacket-1.png" alt="">
+                    </div>
+                    <h4 class="text-2xl text-blue-950 font-bold">Yellow Coat Jacket</h4>
+                    <p class="font-roboto">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <p class="font-roboto text-3xl font-extrabold text-yellow-500">$234</p>
+                        <button
+                            class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+
+                <!-- jacket-2 -->
+                <div class="space-y-3 p-4">
+                    <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                        <img src="./images/jacket-2.png" alt="">
+                    </div>
+                    <h4 class="text-2xl text-blue-950 font-bold">Ladies Jacket</h4>
+                    <p class="font-roboto">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <p class="font-roboto text-3xl font-extrabold text-yellow-500">$234</p>
+                        <button
+                            class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+
+                <!-- jacket-3 -->
+                <div class="space-y-3 p-4">
+                    <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                        <img src="./images/jacket-3.png" alt="">
+                    </div>
+                    <h4 class="text-2xl text-blue-950 font-bold">Women Leather Jacket</h4>
+                    <p class="font-roboto">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <p class="font-roboto text-3xl font-extrabold text-yellow-500">$234</p>
+                        <button
+                            class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+            </div>
         </section>
+        <!-- Women Jacket Section Ends -->
+
+
+        <!-- Man Jacket Section -->
+        <section class="lg:py-12 lg:px-28 max-w-7xl mx-auto ">
+            <h3 class="text-center lg:text-left font-bebas text-4xl lg:pb-5 text-blue-950">Men's Jacket</h3>
+            <div class="grid grid-cols-3 gap-x-12 ">
+                <!-- jacket-1 -->
+                <div class="space-y-3 p-4">
+                    <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                        <img src="./images/jacket-4.png" alt="">
+                    </div>
+                    <h4 class="text-2xl text-blue-950 font-bold">Snowboard Jacket Mens</h4>
+                    <p class="font-roboto">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <p class="font-roboto text-3xl font-extrabold text-yellow-500">$234</p>
+                        <button
+                            class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+
+                <!-- jacket-2 -->
+                <div class="space-y-3 p-4">
+                    <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                        <img src="./images/jacket-5.png" alt="">
+                    </div>
+                    <h4 class="text-2xl text-blue-950 font-bold">Men Leather Jackets</h4>
+                    <p class="font-roboto">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <p class="font-roboto text-3xl font-extrabold text-yellow-500">$234</p>
+                        <button
+                            class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+
+                <!-- jacket-3 -->
+                <div class="space-y-3 p-4">
+                    <div class="bg-[#F1F1F1] p-5 rounded-3xl">
+                        <img src="./images/jacket-6.png" alt="">
+                    </div>
+                    <h4 class="text-2xl text-blue-950 font-bold">Man Casual Jackets</h4>
+                    <p class="font-roboto">Lorem Ipsum is simply dummy text of the
+                        printing and typesetting industry.</p>
+                    <div class="flex justify-between items-center">
+                        <p class="font-roboto text-3xl font-extrabold text-yellow-500">$234</p>
+                        <button
+                            class=" py-4 px-8 rounded-xl uppercase text-white font-medium bg-gradient-to-r from-[#A4BC46] to-[#85A019]">
+                            <svg xmlns="http://www.w3.org/2000/svg" fill="white" viewBox="0 0 24 24" stroke-width="1.5"
+                                stroke="currentColor" class="w-6 h-6 inline">
+                                <path stroke-linecap="round" stroke-linejoin="round"
+                                    d="M2.25 3h1.386c.51 0 .955.343 1.087.835l.383 1.437M7.5 14.25a3 3 0 00-3 3h15.75m-12.75-3h11.218c1.121-2.3 2.1-4.684 2.924-7.138a60.114 60.114 0 00-16.536-1.84M7.5 14.25L5.106 5.272M6 20.25a.75.75 0 11-1.5 0 .75.75 0 011.5 0zm12.75 0a.75.75 0 11-1.5 0 .75.75 0 011.5 0z" />
+                            </svg>Buy Now
+                        </button>
+                    </div>
+                </div>
+            </div>
+        </section>
+        <!-- Man Jacket Section Ends  -->
     </main>
 </body>
 
