--- a/index.html
+++ b/index.html
@@ -51,7 +51,6 @@
             </div>
         </div>
     </header>
-
     <!-- Header Section Ends -->
 
 
@@ -60,11 +59,11 @@
     <main>
 
         <!-- Women Jacket Section -->
-        <section class="lg:py-12 lg:px-28 max-w-7xl mx-auto ">
+        <section class="lg:py-12 px-10 lg:px-28 max-w-7xl mx-auto">
             <h3 class="text-center lg:text-left font-bebas text-4xl lg:pb-5 text-blue-950">Woman Jackets</h3>
-            <div class="grid grid-cols-3 gap-x-12 ">
+            <div class="grid gird-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 ">
                 <!-- jacket-1 -->
-                <div class="space-y-3 p-4">
+                <div class="space-y-3 p-4 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-3xl">
                         <img src="./images/jacket-1.png" alt="">
                     </div>
@@ -85,7 +84,7 @@
                 </div>
 
                 <!-- jacket-2 -->
-                <div class="space-y-3 p-4">
+                <div class="space-y-3 p-4 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-3xl">
                         <img src="./images/jacket-2.png" alt="">
                     </div>
@@ -106,7 +105,7 @@
                 </div>
 
                 <!-- jacket-3 -->
-                <div class="space-y-3 p-4">
+                <div class="space-y-3 p-4 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-3xl">
                         <img src="./images/jacket-3.png" alt="">
                     </div>
@@ -131,11 +130,11 @@
 
 
         <!-- Man Jacket Section -->
-        <section class="lg:py-12 lg:px-28 max-w-7xl mx-auto ">
-            <h3 class="text-center lg:text-left font-bebas text-4xl lg:pb-5 text-blue-950">Men's Jacket</h3>
-            <div class="grid grid-cols-3 gap-x-12 ">
+        <section class="lg:py-12 px-10 lg:px-28 max-w-7xl mx-auto  ">
+            <h3 class="text-center lg:text-left font-bebas text-4xl py-16 lg:py-0 lg:pb-5 text-blue-950">Men's Jacket</h3>
+            <div class="grid gird-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 ">
                 <!-- jacket-1 -->
-                <div class="space-y-3 p-4">
+                <div class="space-y-3 p-4 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-3xl">
                         <img src="./images/jacket-4.png" alt="">
                     </div>
@@ -156,7 +155,7 @@
                 </div>
 
                 <!-- jacket-2 -->
-                <div class="space-y-3 p-4">
+                <div class="space-y-3 p-4 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-3xl">
                         <img src="./images/jacket-5.png" alt="">
                     </div>
@@ -177,7 +176,7 @@
                 </div>
 
                 <!-- jacket-3 -->
-                <div class="space-y-3 p-4">
+                <div class="space-y-3 p-4 drop-shadow-lg">
                     <div class="bg-[#F1F1F1] p-5 rounded-3xl">
                         <img src="./images/jacket-6.png" alt="">
                     </div>
