Added all the Sections and Responsive Done

--- a/index.html
+++ b/index.html
@@ -130,8 +130,9 @@
 
 
         <!-- Man Jacket Section -->
-        <section class="lg:py-12 px-10 lg:px-28 max-w-7xl mx-auto  ">
-            <h3 class="text-center lg:text-left font-bebas text-4xl py-16 lg:py-0 lg:pb-5 text-blue-950">Men's Jacket</h3>
+        <section class="lg:py-12 px-10 lg:px-28 max-w-7xl mx-auto">
+            <h3 class="text-center lg:text-left font-bebas text-4xl py-16 lg:py-0 lg:pb-5 text-blue-950">Men's Jacket
+            </h3>
             <div class="grid gird-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-7 ">
                 <!-- jacket-1 -->
                 <div class="space-y-3 p-4 drop-shadow-lg">
@@ -198,6 +199,47 @@
             </div>
         </section>
         <!-- Man Jacket Section Ends  -->
+        <!-- Card Section Ends  -->
+
+        <!-- 3rd Section Starts -->
+        <section class="block lg:flex justify-between items-center lg:py-12 lg:px-28 lg:max-w-7xl mx-auto mt-20">
+            <div class="text-center lg:text-left pt-20 lg:pt-0 lg:w-1/2">
+                <div class="block lg:flex items-center">
+                    <div class=" flex justify-center lg:block">
+                        <img class="w-20 h-16 pr-5" src="./icons/house.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold text-blue-950 space-y-10">Find the Perfect Fit</h3>
+                        <p>Everybody is different, which is why we<br>
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="block lg:flex space-y-3 items-center pt-10 lg:pt-0">
+                    <div class=" flex justify-center lg:block">
+                        <img class="w-20 h-16 pr-5" src="./icons/box.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold text-blue-950 space-y-10">Free Exchanges</h3>
+                        <p>Everybody is different, which is why we<br>
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+                <div class="block lg:flex space-y-3 items-center pt-10 lg:pt-0 pb-96">
+                    <div class=" flex justify-center lg:block">
+                        <img class="w-20 h-16 pr-5" src="./icons/question.png" alt="">
+                    </div>
+                    <div>
+                        <h3 class="text-2xl font-bold text-blue-950 space-y-10">Contact our Seller</h3>
+                        <p>Everybody is different, which is why we<br>
+                            offer styles for every body.</p>
+                    </div>
+                </div>
+            </div>
+            <div class="hidden lg:block -mt-96 w-1/2"> 
+                <img class="" src="./images/shopping.png" alt="">
+            </div>
+        </section>
+        <!-- 3rd section Ends  -->
     </main>
 </body>
 
